relacionamento criado entre imposto, produto e motivo de isenção
